--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                         <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Los oradores</a>
+                        <a class="nav-link" href="#oradores">Los oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">El lugar y la fecha</a>
+                        <a class="nav-link" href="#lugar">El lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Conviértete en orador</a>
+                        <a class="nav-link" href="#formulario">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><span class="texto-verde">Comprar tickets</span></a>
+                        <a class="nav-link active" href="html/tickets.html"><span class="texto-verde">Comprar tickets</span></a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
     </div>
     <main>
         <!--Pre-Cartas-->
-        <p class="text-center mt-2 mb-0">CONOCE A LOS</p>
+        <p class="text-center mt-2 mb-0" id="oradores">CONOCE A LOS</p>
         <p class=" h1 text-center mt-0">ORADORES</h1>
             <!--Carta de Steve Jobs-->
         <div class="d-flex ms-1 me-1">
@@ -151,7 +151,7 @@
             </div>
         </div>
         <!---Postal--->
-        <div class="card mb-3">
+        <div class="card mb-3" id="lugar">
             <div class="row g-0">
                 <div class="col-md-6">
                     <img src="img/honolulu.jpg" class="img-fluid" alt="Buenos Aires Octubre">
@@ -176,7 +176,7 @@
             </div>
         </div>
         <!---Pre-Formulario--->
-        <p class="text-center mt-2 mb-0">CONVIÉRTETE EN UN</p>
+        <p class="text-center mt-2 mb-0" id="formulario">CONVIÉRTETE EN UN</p>
         <p class=" h1 text-center mt-0">ORADOR</h1>
         <p class="text-center">Anótate como orador para dar una <span
                 style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</span>. Cuéntanos de
