--- a/html/tickets.html
+++ b/html/tickets.html
@@ -9,7 +9,6 @@
     <link href="../css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -48,21 +47,21 @@
     <!--Compra de tickets-->
     <main>
         <!--Botones de descuentos-->
-        <div class="container text-center my-4">
-            <div class="row gx-4">
-                <div class="btn col col-lg-4 me-1 border border-primary" id="estudiantes">
+        <div class="container text-center my-4 border border-warning">
+            <div class="row justify-content-center gx-4">
+                <div class="col col-lg-3 me-1 border border-primary" id="estudiantes">
                     <h4>Estudiante</h4>
                     <p>Tienen un descuento</p>
                     <p>80%</p>
                     <p>*presentar documentación</p>
                 </div>
-                <div class="btn col col-lg-4 border border-success" id="trainees">
+                <div class="col col-lg-3 border border-success" id="trainees">
                     <h4>Trainee</h4>
                     <p>Tienen un descuento</p>
                     <p>50%</p>
                     <p>*presentar documentación</p>
                 </div>
-                <div class="btn col col-lg-4 ms-1 py-2 border border-warning" id="juniors">
+                <div class="col col-lg-3 ms-1 py-2 border border-warning" id="juniors">
                     <h4>Junior</h4>
                     <p>Tienen un descuento</p>
                     <p>15%</p>
@@ -73,8 +72,8 @@
         <!--Fin de los botones-->
         <p class="text-center mt-2 mb-0" id="oradores">VENTA</p>
         <p class=" h1 text-center mt-0">VALOR DE TICKET $200</h1>
-        <!--Formulario-->
-        <div class="container my-4">
+            <!--Formulario-->
+        <div class="container my-4 border border-warning">
             <div class="row gx-2">
                 <div class="col-lg-6 col-12">
                     <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
