funcionalidad completa, faltan retoques

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
         <!---Pre-Formulario--->
         <p class="text-center mt-2 mb-0" id="formulario">CONVIÉRTETE EN UN</p>
-        <p class=" h1 text-center mt-0">ORADOR</h1>
+        <p class=" h1 text-center mt-0">ORADOR</p>
         <p class="text-center">Anótate como orador para dar una <span
                 style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</span>. Cuéntanos de
             qué quieres hablar!</p>
