--- a/html/tickets.html
+++ b/html/tickets.html
@@ -44,46 +44,98 @@
             </div>
         </div>
     </nav>
-    <!--Compra de tickets-->
-    <main>
-        <!--Botones de descuentos-->
-        <div class="container text-center my-4 border border-warning">
-            <div class="row justify-content-center gx-4">
-                <div class="col col-lg-3 me-1 border border-primary" id="estudiantes">
-                    <h4>Estudiante</h4>
-                    <p>Tienen un descuento</p>
-                    <p>80%</p>
-                    <p>*presentar documentación</p>
+
+    <div class="row">
+        <div class="col-1 col-lg-2 col-xl-3"></div>
+        <div class="col-10 col-lg-8 col-xl-6 justify-content-center p-0">
+            <!-- PRECIOS -->
+            <div class="d-sm-flex p-0 mt-4 d-md-flex justify-content-between">
+                <div class="border border-primary p-4 text-center">
+                    <h4 class="fw-bold">Estudiante</h4>
+                    <p class="fw-normal">Tienen un descuento</p>
+                    <p class="fw-bold">80%</p>
+                    <small class="fw-light">* presentar documentación</small>
                 </div>
-                <div class="col col-lg-3 border border-success" id="trainees">
-                    <h4>Trainee</h4>
-                    <p>Tienen un descuento</p>
-                    <p>50%</p>
-                    <p>*presentar documentación</p>
+
+                <div class="border border-info p-4 text-center">
+                    <h4 class="fw-bold">Trainee</h4>
+                    <p class="fw-normal">Tienen un descuento</p>
+                    <p class="fw-bold">50%</p>
+                    <small class="fw-light">* presentar documentación</small>
                 </div>
-                <div class="col col-lg-3 ms-1 py-2 border border-warning" id="juniors">
-                    <h4>Junior</h4>
-                    <p>Tienen un descuento</p>
-                    <p>15%</p>
-                    <p>*presentar documentación</p>
-                </div>
-            </div>
-        </div>
-        <!--Fin de los botones-->
-        <p class="text-center mt-2 mb-0" id="oradores">VENTA</p>
-        <p class=" h1 text-center mt-0">VALOR DE TICKET $200</h1>
-            <!--Formulario-->
-        <div class="container my-4 border border-warning">
-            <div class="row gx-2">
-                <div class="col-lg-6 col-12">
-                    <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
-                </div>
-                <div class="col-lg-6 col-12">
-                    <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+
+                <div class="border border-warning p-4 text-center">
+                    <h4 class="fw-bold">Junior</h4>
+                    <p class="fw-normal">Tienen un descuento</p>
+                    <p class="fw-bold">15%</p>
+                    <small class="fw-light">* presentar documentación</small>
                 </div>
             </div>
+
+            <!-- VENTA -->
+            <div>
+                <p class="text-center font-weight-light mt-2 mb-0">VENTA</p>
+                <h1 class="text-center">VALOR DE TICKET $200</h1>
+            </div>
+
+            <!-- FORM -->
+            <div>
+                <form>
+                    <div class="d-flex justify-content-between">
+                        <div class="flex-fill p-2">
+                            <input type="textbox" class="form-control" id="nombre" placeholder="Nombre" name="nombre">
+                        </div>
+                        <div class="flex-fill p-2">
+                            <input type="textbox" class="form-control" id="apellido" placeholder="Apellido"
+                                name="apellido">
+                        </div>
+                    </div>
+
+                    <div class="p-2">
+                        <input type="email" class="form-control" id="email" placeholder="Correo" name="email">
+                    </div>
+
+                    <div class="d-flex justify-content-between">
+                        <div class="flex-fill p-2 col-6">
+                            <label for="cantidad" class="form-label">Cantidad</label>
+                            <input type="number" min="1" class="form-control" id="cantidad" placeholder="Cantidad"
+                                name="cantidad">
+                        </div>
+
+                        <!-- CATEGORIAS -->
+                        <div class="flex-fill p-2 col-6">
+                            <label for="categoria" class="form-label">Categoria</label>
+                            <select class="form-control form-select" id="categoria" name="categoria">
+                                <option>Estudiante</option>
+                                <option>Trainee</option>
+                                <option>Junior</option>
+                            </select>
+                        </div>
+
+                    </div>
+
+                    <div class="d-flex mx-2 rounded pago-total">
+                        <div class="align-self-start fw-normal py-2 px-3">
+                            Total a Pagar: $
+                            <span id="total_a_pagar"></span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-between">
+                        <div class="flex-fill p-2 col-6">
+                            <button type="reset" class="btn text-light w-100" id="borrar" placeholder="Borrar"
+                                name="borrar" style="--bs-btn-bg: #96c93e;--bs-btn-hover-bg:rgb(62, 187, 36);">Borrar</button>
+                        </div>
+                        <div class="flex-fill p-2 col-6">
+                            <button type="button" class="btn text-light w-100" id="resumen"
+                                name="resumen" style="--bs-btn-bg: #96c93e;--bs-btn-hover-bg:rgb(62, 187, 36);">Resumen</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-    </main>
+        <div class="col-1 col-lg-2 col-xl-3"></div>
+    </div>
     <!--Footer-->
     <footer>
         <ul class="nav justify-content-center">
@@ -114,6 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
+    <script src="../js/myScript.js"></script>
 </body>
 
 </html>
