--- a/html/tickets.html
+++ b/html/tickets.html
@@ -15,7 +15,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-dark navbar-expand-lg bg-oscuro">
         <div class="container">
-            <a class="navbar-brand text-white" href="#">
+            <a class="navbar-brand text-white" href="../index.html">
                 <img src="../img/codoacodo.png" alt="Codo a Codo" width="100" height="57">
                 Conf Bs As
             </a>
