--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                         <a class="nav-link" href="#formulario">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="html/tickets.html"><span class="texto-verde">Comprar tickets</span></a>
+                        <a class="nav-link active" href="html/tickets.html"><span class="texto-verde">Comprar
+                                tickets</span></a>
                     </li>
                 </ul>
             </div>
@@ -73,8 +74,10 @@
                             esperamos</span></p>
                 </div>
                 <div class="d-flex justify-content-end ">
-                    <button type="button" class="btn btn-outline-light me-2">Quiero ser orador</button>
-                    <button type="button" class="btn btn-success">Comprar tickets</button>
+                    <a href="#formulario"><button type="button" class="btn btn-outline-light me-2">Quiero ser
+                            orador</button></a>
+                    <a href="html/tickets.html"><button type="button" class="btn btn-success">Comprar
+                            tickets</button></a>
                 </div>
             </div>
         </div>
