--- a/html/tickets.html
+++ b/html/tickets.html
@@ -13,7 +13,7 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-oscuro">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-oscuro py-0">
         <div class="container">
             <a class="navbar-brand text-white" href="../index.html">
                 <img src="../img/codoacodo.png" alt="Codo a Codo" width="100" height="57">
@@ -124,11 +124,12 @@
                     <div class="d-flex justify-content-between">
                         <div class="flex-fill p-2 col-6">
                             <button type="reset" class="btn text-light w-100" id="borrar" placeholder="Borrar"
-                                name="borrar" style="--bs-btn-bg: #96c93e;--bs-btn-hover-bg:rgb(62, 187, 36);">Borrar</button>
+                                name="borrar"
+                                style="--bs-btn-bg: #96c93e;--bs-btn-hover-bg:rgb(62, 187, 36);">Borrar</button>
                         </div>
                         <div class="flex-fill p-2 col-6">
-                            <button type="button" class="btn text-light w-100" id="resumen"
-                                name="resumen" style="--bs-btn-bg: #96c93e;--bs-btn-hover-bg:rgb(62, 187, 36);">Resumen</button>
+                            <button type="button" class="btn text-light w-100" id="resumen" name="resumen"
+                                style="--bs-btn-bg: #96c93e;--bs-btn-hover-bg:rgb(62, 187, 36);">Resumen</button>
                         </div>
                     </div>
                 </form>
@@ -157,12 +158,12 @@
             <li class="nav-item m-auto">
                 <a class="nav-link text-light" href="#">Privacidad</a>
             </li>
-            <li class="nav-item m-auto m-auto">
+            <li class="nav-item m-auto">
                 <a class="nav-link text-light" href="#">Estudiantes</a>
             </li>
         </ul>
     </footer>
-
+    <!--Scripts-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
