--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-oscuro">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-oscuro py-0">
         <div class="container">
             <a class="navbar-brand text-white" href="#">
                 <img src="img/codoacodo.png" alt="Codo a Codo" width="100" height="57">
@@ -51,13 +51,13 @@
     <div class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/ba1.jpg" class="img-fluid img-semitrans" alt="Buenos Aires 1">
+                <img src="img/ba1.jpg" class="d-block w-100 img-semitrans" alt="Buenos Aires 1">
             </div>
             <div class="carousel-item">
-                <img src="img/ba2.jpg" class="img-fluid img-semitrans" alt="Buenos Aires 2">
+                <img src="img/ba2.jpg" class="d-block w-100 img-semitrans" alt="Buenos Aires 2">
             </div>
             <div class="carousel-item">
-                <img src="img/ba3.jpg" class="img-fluid img-semitrans" alt="Buenos Aires 3">
+                <img src="img/ba3.jpg" class="d-block w-100 img-semitrans" alt="Buenos Aires 3">
             </div>
             <div class="carousel-caption text-white">
                 <h1 class="text-end">Conf Bs As</h1>
@@ -86,14 +86,13 @@
         <!--Pre-Cartas-->
         <p class="text-center mt-2 mb-0" id="oradores">CONOCE A LOS</p>
         <p class=" h1 text-center mt-0">ORADORES</h1>
-            <!--Carta de Steve Jobs-->
         <div class="d-flex ms-1 me-1">
-            <div class="box col-2">
-            </div>
+            <div class="box col-2"></div>
             <div class="box col-8">
                 <div class="row row-cols-1 row-cols-sm-3 g-3  mb-4">
+                    <!--Carta de Steve Jobs-->
                     <div class="col">
-                        <div class="card h-100">
+                        <div class="card">
                             <img class="card-img-top" src="img/steve.jpg" alt="steve">
                             <div class="card-body">
                                 <span class="badge bg-warning text-dark">Javascript</span>
@@ -180,7 +179,7 @@
         </div>
         <!---Pre-Formulario--->
         <p class="text-center mt-2 mb-0" id="formulario">CONVIÉRTETE EN UN</p>
-        <p class=" h1 text-center mt-0">ORADOR</p>
+        <p class="h1 text-center mt-0">ORADOR</p>
         <p class="text-center">Anótate como orador para dar una <span
                 style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</span>. Cuéntanos de
             qué quieres hablar!</p>
