--- a/html/tickets.html
+++ b/html/tickets.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conferencia CaC</title>
+    <title>Comprar Tickets</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="../css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -57,7 +58,7 @@
                     <small class="fw-light">* presentar documentación</small>
                 </div>
 
-                <div class="border border-info p-4 text-center">
+                <div class="border border-success p-4 text-center">
                     <h4 class="fw-bold">Trainee</h4>
                     <p class="fw-normal">Tienen un descuento</p>
                     <p class="fw-bold">50%</p>
