--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conferencia CaC</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -191,10 +191,10 @@
             <div class="box col-sm-6 col-10">
                 <div class="row g-3">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+                        <input type="textbox" class="form-control" placeholder="Nombre" aria-label="First name">
                     </div>
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+                        <input type="textbox" class="form-control" placeholder="Apellido" aria-label="Last name">
                     </div>
                 </div>
                 <div class="form-floating">
